--- a/.github/workflows/graphviz.yml
+++ b/.github/workflows/graphviz.yml
@@ -14,4 +14,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: redirection des artefacts
-        path: /resultat
+        path: g1.svg
